Bug 456186 - Crash when closing tab containing bookmarks manager. Patch by Sean Murphy <murph@seanmurph.com>, r/sr=smorgan